--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: sans-serif;
+  height: 100%;
+  margin: 0;
 }
 
 html {
@@ -19,4 +21,26 @@ header {
 header h1 {
   margin: 0;
   padding-top: 10px;
+}
+
+input {
+  border: 1px solid #cecfd2;
+  border-radius: 5px;
+}
+
+button{
+  width: 70px;
+  height: auto;
+  background-color: lightblue ;
+  border: none;
+  border-radius: 5px;
+  transition-duration: .4s;
+}
+
+button:hover {
+  background-color: rgb(110, 158, 110);
+}
+
+button:focus {
+  border: none;
 }
