Created five-day forcast container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,13 @@ button:focus {
 .search h1 {
   line-height: 30px;
 }
+
+.five-day-container h1 {
+  margin-top: 25px;
+  margin-left: 5%;
+}
+
+.card-row {
+  display: flex;
+  flex-direction: row;
+}
