--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,84 @@ button:focus {
   display: flex;
   flex-direction: row;
 }
+
+.five-day-card {
+  margin-left: 58.5px;
+  width: 175px;
+  height: auto;
+  border-radius: 5px;
+  color: white;
+  font-size: larger;
+  background-color: #3498db;
+}
+
+.five-day-container .card-text {
+  margin-bottom: 15px;
+  padding: 10px 30px 5px 10px;
+}
+
+.five-day-card h3 {
+  margin: 5px;
+}
+
+.five-day-card img {
+  margin-left: 10%;
+}
+
+.historyItems {
+  margin-top: 20px;
+}
+
+.historyItems:nth-child() {
+  margin-top: 20px;
+}
+
+img {
+  width: auto;
+  height: auto;
+}
+
+input {
+  height: 40px;
+  width: auto;
+}
+
+li:first-child {
+  height: 100%;
+  font-size: larger;
+  background-color: white;
+  border: solid 1px #cecfd2;
+  border-radius: 6px 6px 0px 0px;
+  padding: 12px 5px 12px 15px;
+  list-style: none;
+}
+
+li {
+  height: 100%;
+  font-size: larger;
+  background-color: white;
+  border: solid 1px #cecfd2;
+  border-radius: 0px 0px 0px 0px;
+  padding: 12px 5px 12px 15px;
+  list-style: none;
+}
+
+li:last-child {
+  height: 100%;
+  font-size: larger;
+  background-color: white;
+  border: solid 1px #cecfd2;
+  border-radius: 0px 0px 6px 6px;
+  padding: 12px 5px 12px 15px;
+  list-style: none;
+}
+
+.row {
+  display: flex;
+  line-height: 50%;
+  margin: 5px 5px 5px 0px;
+}
+
+.row * {
+  margin-right: 5px;
+}
