--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,17 @@ header {
   background-color: #2f3640;
 }
 
+.container {
+  display: flex;
+  flex-direction: row;
+  max-width: 640px;
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 header h1 {
   margin: 0;
   padding-top: 10px;
