--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ input {
 button{
   width: 70px;
   height: auto;
-  background-color: lightblue ;
+  background-color: #3498db ;
   border: none;
   border-radius: 5px;
   transition-duration: .4s;
